[project]
name = "share-cancer"
version = "0.1.0"
description = "Cancer in SHARE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "matplotlib>=3.10.9",
  "morethemes>=0.6.0",
  "pyshare",
]

[tool.uv.sources]
pyshare = { git = "https://github.com/JosephBARBIERDARNAL/pyshare.git" }
